@@ -71,10 +71,10 @@ and pattern_desc =
   | Ppat_alias of pattern * string
   | Ppat_constant of constant
   | Ppat_tuple of pattern list
-  | Ppat_construct of Longident.t * pattern option * bool * Longident.t option
+  | Ppat_construct of Longident.t * pattern option * bool
   | Ppat_variant of label * pattern option
   | Ppat_record of
-      (Longident.t * pattern) list * closed_flag * Longident.t option
+      (Longident.t * pattern) list * closed_flag
   | Ppat_array of pattern list
   | Ppat_or of pattern * pattern
   | Ppat_constraint of pattern * core_type
