@@ -1,3 +1,8 @@
+Camlp5 Version 6.02.1:
+----------------------
+
+* [16 Nov 10] Updated compatibility with OCaml version 3.13.0-gadt.
+
 Camlp5 Version 6.02.0:
 ----------------------
 
